// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <div
    style={
      Object {
        "marginRight": 20,
        "textDecoration": "none",
      }
    }
    to="/albums/undefined/premium"
  >
    Link - 
    <button
      className="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-raised-15 MuiButton-raisedPrimary-16"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-2"
      >
        Compartilhar álbum
      </span>
      <span
        className="MuiTouchRipple-root-69"
      />
    </button>
  </div>
  <div
    style={
      Object {
        "textDecoration": "none",
      }
    }
    to="/albums/undefined/premium"
  >
    Link - 
    <div>
      <label
        className="MuiFormControlLabel-root-30"
      >
        <div
          checked={false}
          disabled={undefined}
          onChange={[Function]}
          style={
            Object {
              "pointerEvents": "none",
            }
          }
        >
          Dialog - 
           - 
        </div>
        <span
          className="MuiTypography-root-34 MuiTypography-body1-43 MuiFormControlLabel-label-33"
        >
          Tornar álbum privado
        </span>
      </label>
    </div>
  </div>
  <div>
    Album
  </div>
</div>
`;

exports[`renders correctly with id 1`] = `
<div>
  <div
    style={
      Object {
        "marginRight": 20,
        "textDecoration": "none",
      }
    }
    to="/albums/123/premium"
  >
    Link - 
    <button
      className="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-raised-15 MuiButton-raisedPrimary-16"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-2"
      >
        Compartilhar álbum
      </span>
      <span
        className="MuiTouchRipple-root-69"
      />
    </button>
  </div>
  <div
    style={
      Object {
        "textDecoration": "none",
      }
    }
    to="/albums/123/premium"
  >
    Link - 
    <div>
      <label
        className="MuiFormControlLabel-root-30"
      >
        <div
          checked={false}
          disabled={undefined}
          onChange={[Function]}
          style={
            Object {
              "pointerEvents": "none",
            }
          }
        >
          Dialog - 
           - 
        </div>
        <span
          className="MuiTypography-root-34 MuiTypography-body1-43 MuiFormControlLabel-label-33"
        >
          Tornar álbum privado
        </span>
      </label>
    </div>
  </div>
  <div>
    Album
  </div>
</div>
`;
